<resources>
    <string name="app_name">Blog site</string>

    <string name="register_username">username...</string>
    <string name="register_password">password...</string>

    <string name="btn_registerUser">register</string>

    <string name="tv_welcome">WELCOME TO BLOG SITE</string>
    <string name="img_represents_blog_site">represents blog site</string>
    <string name="et_login_username">username</string>
    <string name="et_user_password">password</string>
    <string name="login_btn">login</string>
    <string name="login">login</string>
    <string name="to_login">to login</string>
    <string name="tv_username">Username</string>
    <string name="my_quote_text">my quote text</string>
    <string name="represents_profile_picture">represents profile picture</string>
    <string name="tv_MY_PROFILE">MY PROFILE</string>
    <string name="write_blog">write blog</string>
    <string name="tv_profiletext">You must do the thing you think you cannot do</string>
    <string name="tv_logout">logout</string>
    <string name="tv_register">register</string>

    <string name="tv_goToProfile">go to profile</string>
    <string name="hint_writeTitle">write title</string>
    <string name="tv_title">Titles</string>
    <string name="write_title">write title</string>
    <string name="tv_blogPost">Blog posts</string>
    <string name="et_writeBlogpost">Write blogpost</string>
    <string name="btn_submitBlog">Post Blog</string>
    <string name="tv_myTitle">my latest title</string>
    <string name="tv_displayBlogPost">my latest blogpost</string>
    <string name="hint_writeBlogpost">write blogpost</string>

    <string name="tv_myBlog">MY BLOG POST</string>
    <string name="btn_remove_title">remove title</string>
    <string name="tv_displayUserTitle">Display title</string>
    <string name="tv_displayUserBlogpost">Display blogpost</string>
    <string name="et_titleToRemove">Title to remove</string>
    <string name="btn_myBlogs">My Blogs</string>
    <string name="tv_myBlogs">my blogs</string>
    <string name="tv_myName">user</string>
    <string name="get_blogs">Get Blogs</string>
    <string name="advice_id">Advice Id:</string>
    <string name="id_number">Id number</string>


</resources>