<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".WriteBlogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_myProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/tv_goToProfile"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <EditText
            android:id="@+id/et_writeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hint_writeTitle"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"

            android:text="@string/tv_title"
            android:textColor="@color/teal_200"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <TextView
            android:id="@+id/tv_blogPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_blogPost"
            android:textColor="@color/teal_200"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/et_writeTitle"
            app:layout_constraintStart_toStartOf="@+id/et_writeTitle"
            app:layout_constraintTop_toBottomOf="@+id/et_writeTitle" />

        <EditText
            android:id="@+id/et_writeBlogPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:hint="@string/hint_writeBlogpost"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_blogPost"
            app:layout_constraintStart_toStartOf="@+id/tv_blogPost"
            app:layout_constraintTop_toBottomOf="@+id/tv_blogPost" />

        <Button
            android:id="@+id/btn_submitBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btn_submitBlog"
            app:layout_constraintEnd_toEndOf="@+id/et_writeBlogPost"
            app:layout_constraintStart_toStartOf="@+id/et_writeBlogPost"
            app:layout_constraintTop_toBottomOf="@+id/et_writeBlogPost" />

        <Button
            android:id="@+id/btn_removeBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btn_removeBlog"
            app:layout_constraintEnd_toEndOf="@+id/btn_submitBlog"
            app:layout_constraintStart_toStartOf="@+id/btn_submitBlog"
            app:layout_constraintTop_toBottomOf="@+id/btn_submitBlog" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>